// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`labelCreateRuntime -- TEAM_NOT_FOUND > Test 11: unknown team -> client.teams returns 0 -> TEAM_NOT_FOUND > failure-TEAM_NOT_FOUND 1`] = `
{
  "$apiVersion": "1",
  "error": {
    "code": "TEAM_NOT_FOUND",
    "details": {
      "ref": "BOGUS",
    },
    "message": "team not found: BOGUS",
    "transient": false,
  },
  "meta": {
    "command": "label create",
  },
  "ok": false,
}
`;

exports[`labelCreateRuntime -- WSP-06 > Test 8: no explicit workspace + active default -> WORKSPACE_REQUIRED_FOR_WRITE BEFORE any SDK call > failure-WSP-06-write-guard 1`] = `
{
  "$apiVersion": "1",
  "error": {
    "code": "WORKSPACE_REQUIRED_FOR_WRITE",
    "details": {
      "remediation": "pass --workspace <name>, set LINEAR_WORKSPACE=<name>, or pass --allow-active-workspace-write",
      "resolvedFrom": "active",
      "resolvedWorkspace": "acme",
    },
    "message": "write commands require an explicit workspace selector: pass --workspace <name>, set LINEAR_WORKSPACE, or pass --allow-active-workspace-write to opt in to using the active default for this invocation",
    "transient": false,
  },
  "meta": {
    "command": "label create",
  },
  "ok": false,
}
`;

exports[`labelCreateRuntime -- happy path (key resolution) > Test 6: --name p0 --team ENG -> resolves key to UUID then createIssueLabel({ name, teamId }) > create-success-key-resolution 1`] = `
{
  "$apiVersion": "1",
  "data": {
    "color": "#ff0000",
    "createdAt": "2026-01-02T00:00:00Z",
    "description": "highest priority",
    "id": "bbbbbbbb-cccc-dddd-eeee-ffffffffffff",
    "name": "p0",
    "parent": {
      "name": null,
    },
    "team": {
      "key": "ENG",
    },
    "updatedAt": "2026-01-02T00:00:00Z",
  },
  "meta": {
    "command": "label create",
    "workspace": "acme",
    "workspaceSource": "flag",
  },
  "ok": true,
}
`;
